--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,27 +1,26 @@
 <nav class="grey darken-3">
   <div class="container">
     <div class="nav-wrapper">
-      <a href="/stories" class="brand-logo center">StoryBooks</a>
+      <a href="/" class="brand-logo center">StoryBooks</a>
       <a href="#" data-activates="main-menu" class="button-collapse show-on-large"><i class="fa fa-bars"></i></a>
-      {{!-- right Nav --}}
-      <ul class="right hight-on-small-only">
+      <!-- RIGHT NAV -->
+      <ul class="right hide-on-small-only">
         {{#if user}}
-        <li><a href="/dashboard"> Welcome {{user.firstName}}</a></li>
+        <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
         <li><a href="/auth/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
         {{else}}
-        <li><a href="/stories"></a><i class="fa fa-book"></i> Public Stories</li>
+        <li><a href="/stories"><i class="fa fa-book"></i> Public Stories</a></li>
         {{/if}}
       </ul>
-      {{!-- side menu --}}
+      <!-- SIDE MENU -->
       <ul class="side-nav" id="main-menu">
-        {{#if user}}
-
+        {{#if user}} 
         {{else}}
         <li>
           <a class="btn red darken-1" href="/auth/google"><i class="fa fa-google left"></i> Login With Google</a>
         </li>
         {{/if}}
-        <li><a href="/stories"><i class="fa fa-book"></i> Public stories</a></li>
+        <li><a href="/stories"><i class="fa fa-book"></i> Public Stories</a></li>
         {{#if user}}
         <li class="divider"></li>
         <li><a href="/dashboard"><i class="fa fa-cog"></i> Dashboard</a></li>
